# BigInteger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
basement/: GmpTest.cpp  Math.h
basement/Langlois/: prime.h  probprime.cpp
basement/js/: Bigint.js  package-lock.json  package.json
basement/js/primes/: generate_primes_file.js  sieves.js  trial_by_division.js
basement/js/primes/know_primes_lists/: primes.js  primes.json  primes1000000.json
bigint/: BigInteger.cpp  BigInteger.h  CMakeLists.txt  GmpBigIntWrapper.cpp  GmpBigIntWrapper.h  README.md  factorial.hpp  fibonocci.cpp  fibonocci.hpp  todo.txt
bigint/src/cpp/: BigInteger.cpp
bigint/src/header/: BigInteger.h
bigint/src/main/: decode_encode_main.cpp  main.cpp
bigint/src/test/: AddTest.cpp  BinaryTest.cpp  CMakeLists.txt  CompareTests.cpp  DivTest.cpp  EqualTest.cpp  IncDecTest.cpp  IsPrimeTest.cpp  LessThenTest.cpp  ModRemanderTest.cpp  MultTest.cpp  SubTest.cpp
data/: first_2000_ fibonacci_number.txt
dsj_string/: CMakeLists.txt  StringUtils.hpp
js/: Bigint.js  package-lock.json  package.json
js/primes/: generate_primes_file.js  sieves.js  trial_by_division.js
js/primes/know_primes_lists/: primes1000000.json
math/: CMakeLists.txt  Math.cpp  Math.h
math/fibonocci/: fibonocci.cpp  fibonocci.hpp
math/primes/: ListingPrimes.cpp  ListingPrimes.h  PrimeTable.h
math/primes/Langlois/: prime.h  probprime.cpp
math/src/cpp/: listing_primes.cpp
math/src/header/: fibonacci.h  fibonocci.h  known_primes_table.h  listing_primes.h
math/src/main/: math_main.cpp
math/src/test/: CMakeLists.txt  FibonacciTest.cpp  FibonocciTest.cpp  GmpTest.cpp  PrimesTest.cpp
mystudy/: CMakeLists.txt  Node.cpp  Node.h  test.cpp
random/: random.cpp  random.h
tests/: AddTest.cpp  CMakeLists.txt  CreateCopyAssignmentTest.cpp  DivTest.cpp  EqualTest.cpp  FactorialTest.cpp  IncDecTest.cpp  LessThenTest.cpp  MultTest.cpp  SubTest.cpp
tests/big_interger/: AddTest.cpp  BinaryTest.cpp  CompareTests.cpp  DivTest.cpp  EqualTest.cpp  IncDecTest.cpp  IsPrimeTest.cpp  LessThenTest.cpp  ModRemanderTest.cpp  MultTest.cpp  SubTest.cpp
tests/fibbonocci/: FibonocciTest.cpp
tests/gmp/: GmpTest.cpp
tests/math/fibbonocci/: FibonocciTest.cpp
tests/math/primes/: PrimesTest.cpp
tests/utils/: EasyCotainerTest.com.cpp  EasyStringTest.cpp  EasyVectorTest.cpp  MetricTest.cpp  RandomStringTest.cpp
timers/: dsj_timer.h
utils/: CMakeLists.txt  Props.cpp  README.md  StringUtils.cpp  TimeMetric.cpp  TimeMetric.hpp  dsjVector.cpp  dsj_vector.h  easy_array.cpp  easy_array.h  easy_common.h  easy_dqueue.cpp  easy_dqueue.h  easy_map.cpp  easy_map.h  easy_set.cpp  easy_set.h  easy_string.cpp  easy_string.hpp  easy_timer.h  easy_vector.cpp  easy_vector.h  macros.h  notes.txt  random_string.cpp  random_string.h
